[package]
name = "leechbar"
version = "0.1.0"
authors = ["Christian Dürr <contact@christianduerr.com>"]
build = "build.rs"

[build-dependencies]
wayland-scanner = "0.7.6"

[dependencies]
xcb-util = {version = "0.1.7", features = ["icccm", "ewmh", "thread"] }
wayland-client = "0.7.6"
wayland-sys = "0.7.6"
lazy_static = "0.2.2"
tempfile = "2.1.4"
rusttype = "0.2.1"
image = "0.10.4"
regex = "0.2.1"
toml = "0.2.1"
xcb = "0.7.6"
